--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /*border-bottom: 2px solid #000000;*/
+  /* border-bottom: 2px solid rgba(0, 0, 0, 0.3) */
 }
 
 .logo-slogan {
@@ -53,7 +53,7 @@ header > nav > ul > li {
 
 main {
   margin-top: 25px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 /* home styles */
@@ -64,16 +64,28 @@ main {
   align-items: center;
   text-align: end;
   font-size: 20px;
+  background-image: url('../images/café_faixa.png');
+  background-repeat: no-repeat; /* Impede que a imagem se repita */
+  background-size: cover; /* Faz com que a imagem cubra todo o background */
+  background-position: center; /* Centraliza a imagem no corpo */
+  margin: 0;
+  padding: 0;
+  margin-top: 70px;
 }
 
 .home-body > div,
 .imagem-main,
 .imagem-main > img {
-  width: 600px;
+  width: 400px;
 }
 
 .home-body p {
-  font-size: 20px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  
+  text-align: center;
+  color:var(--pastel-color);
 }
 
 /* fim home styles */
@@ -92,6 +104,10 @@ main {
   font-size: 20px;
 }
 
+footer{
+  margin-top: 80px;
+}
+
 footer > p {
   font-size: 80%;
   text-align: center;
@@ -107,9 +123,10 @@ footer > p {
 }
 
 .contatos > ul > li {
-  margin-right: 40px;
+  margin: 10px;
   font-size: 80%;
-  margin-bottom: 20px;
+  text-align: center;
+
 }
 
 .redes-sociais {
