--- a/styles/nav.css
+++ b/styles/nav.css
@@ -23,17 +23,59 @@ header {
   transform: rotatey(180deg);
 }
 
-header > nav > ul {
+.opcoes {
+  display: flex;
+  margin-right: 20px;
+}
+
+header > div > nav > ul {
   display: flex;
 }
 
-header > nav > ul > li > a {
+header > div > nav > ul > li > a {
   text-decoration: none;
   margin-right: 40px;
   text-transform: uppercase;
   font-size: 13px;
 }
 
-header > nav > ul > li {
+header > div > nav > ul > li {
   list-style: none;
+}
+
+.hamburguer {
+  background: none;
+  border: none;
+  border-top: 3px solid #000;
+  cursor: pointer;
+  width: 30px;
+}
+
+.hamburguer::before,
+.hamburguer::after {
+  content: " ";
+  display: block;
+  width: 30px;
+  height: 3px;
+  background: #000;
+  margin-top: 5px;
+}
+
+.nav-hidde > li > a,
+.nav-show,
+.nav-show > li > a {
+  list-style: none;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+.nav-hidde {
+  max-height: 0;
+  overflow: hidden;
+  transition: 1s ease-in-out;
+}
+
+.nav-show {
+  height: 200px;
+  position: absolute;
 }
