--- a/styles/Root.css
+++ b/styles/Root.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   --font-nono: "Noto Sans";
   --cinzento-color: #262525;
