--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,7 +5,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* border-bottom: 2px solid rgba(0, 0, 0, 0.3) */
+  /* border-bottom: 2px solid rgba(255, 255, 255, 0.5); */
   font-family: var(--font-nono);
 }
 
@@ -29,13 +29,20 @@ header {
   margin-right: 80px;
 }
 
+.linha {
+  height: 1px; /* Espessura da linha */
+  background-color: #ffffff; /* Cor da linha */
+  margin-top: 10px;
+  width: 115%;
+}
+
 header > div > nav > ul {
   display: flex;
 }
 
 header > div > nav > ul > li > a {
   text-decoration: none;
-  margin-right: 40px;
+  margin-right: 35px;
   text-transform: uppercase;
   font-size: 13px;
 }
