--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,10 @@
 @import "Root.css";
 
 footer {
-  margin-top: 80px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  padding-top: 15px;
+  border-top: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 footer > p {
