--- a/styles/home.css
+++ b/styles/home.css
@@ -23,16 +23,16 @@ main {
 }
 
 .hero {
-  padding: 100px 20px;
+  padding: 7% 1%;
 }
 
 .hero::before {
   content: '';
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 0;
   right: 0;
-  bottom: 0px;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
