--- a/styles/nav.css
+++ b/styles/nav.css
@@ -22,6 +22,10 @@ header {
   max-width: 150px;
   max-height: 150px;
   transform: rotatey(180deg);
+  background-color: rgba(255, 255, 255, 0.3);
+  border: 2px solid #000000;
+  border-radius: 20%;
+  margin: 20px;
 }
 
 .opcoes {
