Ajuste Background-Image

--- a/styles/home.css
+++ b/styles/home.css
@@ -13,7 +13,7 @@ body {
   overflow-y: auto;
   background-image: url('../images/coffeeShopAesthetic.jpg');
   background-repeat: no-repeat;
-  height: 76.2vh;
+  height: 100vh;
   background-size: cover;
   background-position: center;
 }
@@ -23,16 +23,16 @@ main {
 }
 
 .hero {
-  padding: 7% 1%;
+  padding: 5% 1%;
 }
 
 .hero::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 0px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
