--- a/styles/home.css
+++ b/styles/home.css
@@ -59,6 +59,7 @@ main {
   background: orange;
   margin-left: 150px;
   color: white;
+  border-radius: 5px;
   border: none;
   cursor: pointer;
   position: relative;
