--- a/styles/nav.css
+++ b/styles/nav.css
@@ -29,8 +29,8 @@ header {
 }
 
 .linha {
-  height: 1px; /* Espessura da linha */
-  background-color: #ffffff; /* Cor da linha */
+  height: 1px;
+  background-color: #fff;
   margin-top: 10px;
   width: 94%;
 }
@@ -71,7 +71,6 @@ a {
 
 #menu-hidde > ul > li > a {
   color: #000;
-  transition: 1s ease-in-out;
 }
 
 #menu-hidde > ul {
@@ -87,11 +86,15 @@ a {
   font-size: 15px;
   text-align: center;
   padding-top: 20px;
-  transition: 1s ease-out;
+  transition: 0.5s ease-out;
 }
 
 #menu-hidde > ul > li:hover {
   background: gray;
+}
+
+#menu-hidde > ul > li:hover > a {
+  color: #fff;
 }
 
 i#hamburguer {
@@ -99,10 +102,6 @@ i#hamburguer {
   right: 45px;
   display: block;
   cursor: pointer;
-}
-
-#hamburguer:hover + #menu-hidde {
-  display: block;
 }
 
 #menu-hidde:hover {
@@ -126,4 +125,41 @@ i#hamburguer {
   position: absolute;
   left: 5px;
   color: #fff;
+}
+
+/*para telemovel*/
+
+@media (max-width: 915px) {
+  header {
+    display: flex;
+    flex-direction: column;
+    /* border-bottom: 2px solid rgba(255, 255, 255, 0.5); */
+    font-family: var(--font-nono);
+  }
+
+  .logo-slogan > p {
+    display: none;
+  }
+  header > div > nav > ul {
+    display: none;
+  }
+  i#hamburguer {
+    position: absolute;
+    right: 47%;
+  }
+
+  #menu-hidde:hover {
+    display: block;
+  }
+  #menu-hidde {
+    display: none;
+    text-transform: uppercase;
+  }
+  .nav-hidde {
+    position: absolute;
+    right: 0;
+    top: 220px;
+    width: 100%;
+    height: 84.6vh;
+  }
 }
