modificaçao topicoUM.html e topicoUM.css

--- a/styles/topicoUm.css
+++ b/styles/topicoUm.css
@@ -1,6 +1,14 @@
 @import "Root.css";
 
+p{
+    margin-left: 15px;
+}
+
 .main-topicoUm{
     margin: 20px;
+}
+
+.explicacaoEmpresa{
+    text-align: center;
 }
 
