--- a/styles/topicoDois.css
+++ b/styles/topicoDois.css
@@ -1,26 +1,56 @@
 @import "Root.css";
 
-p{
-    margin-left: 15px;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.main-topicoDois{
-    display: flex;
-    justify-content: space-between;
-    margin: 25px;
-    padding: 10px;
+.topicoDois {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 25px 25px 0;
+  padding: 10px;
+  width: 1000px;
 }
 
-.swot{
-    width: 50%;
+.topicoPartUm {
+  display: flex;
+  justify-content: center;
 }
 
-h2{
-    text-align: center;
-    margin-bottom: 10px;
+.swot {
+  width: 450px;
+  background-color: var(--bordo-color);
+  margin: 10px;
+  border-radius: 10px;
 }
 
-li{
-    margin: 5px 0;
-    padding: 10px;
+h2 {
+  margin-top: 5px;
+  text-align: center;
+  margin-bottom: 10px;
+  color: var(--pastel-color);
+}
+
+.swot > ul > li {
+  margin: 5px 0;
+  padding: 10px;
+  list-style: none;
+  color: var(--pastel-color);
+}
+
+.opcao-hide {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.forca-explicacao {
+  display: none;
 }
