--- a/styles/Root.css
+++ b/styles/Root.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: var(--font-nono);
 }
 
 :root {
@@ -13,4 +14,10 @@
   --pastel-color: #e6ddbc;
   --bordo-claro-color: #822626;
   --bordo-color: #690202;
+}
+
+@media (max-width: 915px) {
+  * {
+    font-size: 15px;
+  }
 }
