--- a/styles/home.css
+++ b/styles/home.css
@@ -3,7 +3,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: var(--font-nono);
   box-sizing: border-box;
   color: white;
   z-index: 2;
@@ -11,7 +10,7 @@
 
 body {
   overflow-y: auto;
-  background-image: url('../images/coffeeShopAesthetic.jpg');
+  background-image: url("../images/coffeeShopAesthetic.jpg");
   background-repeat: no-repeat;
   height: 100vh;
   background-size: cover;
@@ -27,7 +26,7 @@ main {
 }
 
 .hero::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0px;
   left: 0;
@@ -56,7 +55,7 @@ main {
 .hero button {
   padding: 10px 20px;
   font-size: 20px;
-  background: orange;
+  background: var(--pastel-color);
   margin-left: 150px;
   color: white;
   border-radius: 5px;
@@ -65,7 +64,6 @@ main {
   position: relative;
   z-index: 2;
 }
-
 
 /* home styles */
 
@@ -84,7 +82,7 @@ main {
   margin-top: 70px;
 }
 
-.margin-test{
+.margin-test {
   margin-left: 9px;
 }
 
@@ -98,7 +96,36 @@ main {
   margin-top: 40px;
   margin-bottom: 30px;
   font-size: 18px;
-
   text-align: center;
   color: var(--pastel-color);
+}
+
+@media (max-width: 915px) {
+  .hero button {
+    margin-top: 7px;
+    margin-left: 20px;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    position: static;
+  }
+  .hero h1 {
+    position: static;
+    color: #fff;
+    font-size: 50px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+
+  .hero p {
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    position: static;
+  }
+
+  .logo-slogan > h1 {
+    color: #fff;
+  }
 }
