--- a/styles/topicoDois.css
+++ b/styles/topicoDois.css
@@ -1,9 +1,18 @@
 @import "Root.css";
 
+body {
+  background-color: #f9f9f9;
+}
+
 main {
   display: flex;
+  margin: auto;
   flex-direction: column;
   align-items: center;
+  background-color: #fff;
+  width: 1100px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
 
 .topicoDois {
@@ -28,7 +37,7 @@ main {
   border-radius: 10px;
 }
 
-h2 {
+main h2 {
   margin-top: 5px;
   text-align: center;
   margin-bottom: 10px;
@@ -52,10 +61,53 @@ h2 {
   cursor: pointer;
 }
 
+.forca-explicacao,
+.explicacao-fraqueza,
+.oportunidade-explicacao,
+.ameacas-explicacao {
+  width: 600px;
+  margin-bottom: 20px;
+}
+
+.forca-explicacao li,
+.explicacao-fraqueza li,
+.oportunidade-explicacao li,
+.ameacas-explicacao li {
+  margin-bottom: 10px;
+  list-style: none;
+}
+
 .forca-explicacao {
   display: none;
 }
 
 .explicacao-fraqueza {
   display: none;
+}
+
+.oportunidade-explicacao {
+  display: none;
+}
+
+.ameacas-explicacao {
+  display: none;
+}
+
+@media (max-width: 915px) {
+  main {
+    width: 380px;
+    margin-top: 25px;
+  }
+
+  .topicoDois {
+    margin: auto;
+    width: 380px;
+  }
+
+  .forca-explicacao,
+  .explicacao-fraqueza,
+  .oportunidade-explicacao,
+  .ameacas-explicacao {
+    width: 300px;
+  }
 }
