--- a/styles/topicoTres.css
+++ b/styles/topicoTres.css
@@ -2,61 +2,63 @@
 
 /* Estilos básicos */
 body {
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  margin: 0;
-  padding: 0;
   color: #333;
   background-color: #f9f9f9;
   line-height: 1.6;
 }
 
-.frase {
-  margin-left: 5px;
-}
-
 /* Conteúdo principal */
 .main-conteudo {
   padding: 30px 20px;
-  max-width: 800px;
+  width: 1100px;
   margin: auto;
   background-color: #ffffff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
 
-section {
+.main-conteudo section {
   margin-bottom: 25px;
   padding-bottom: 15px;
   border-bottom: 1px solid #eee;
 }
 
-section:last-child {
+.main-conteudo section:last-child {
   border-bottom: none;
 }
 
-h2 {
+.main-conteudo h2 {
   font-size: 1.8em;
   color: #444;
   margin-bottom: 10px;
 }
 
-h3 {
+.main-conteudo h3 {
   font-size: 1.4em;
   color: #444;
   margin-top: 10px;
   margin-bottom: 8px;
 }
 
-ul {
+.main-conteudo ul {
   list-style-type: none;
   padding: 0;
 }
 
-ul li {
+.main-conteudo ul li {
   padding: 6px 0;
   color: #333;
 }
 
-ul li strong {
+.main-conteudo ul li strong {
   color: #555;
+}
+
+@media (max-width: 915px) {
+  .main-conteudo {
+    padding: 30px 20px;
+    width: 380px;
+    margin: auto;
+    margin-top: 25px;
+  }
 }
