--- a/styles/topicoUm.css
+++ b/styles/topicoUm.css
@@ -1,19 +1,58 @@
 @import "Root.css";
 
-p {
+body {
+  background-color: #f9f9f9;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+}
+
+.main-topicoUm {
+  width: 1100px;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.main-container p {
   margin-left: 15px;
 }
 
 .main-topicoUm {
-  margin: 20px;
+  margin: 0 20px;
+}
+
+.main-topicoUm li {
+  list-style: none;
 }
 
 .explicacaoEmpresa {
   text-align: center;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+@media (max-width: 915px) {
+  .main-container {
+    width: 380;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+  }
+  .main-container p {
+    margin-left: 15px;
+  }
+
+  .main-topicoUm {
+    margin: 0 20px;
+  }
+
+  .main-topicoUm li {
+    list-style: none;
+  }
+
+  .explicacaoEmpresa {
+    text-align: justify;
+  }
 }
