--- a/styles/nav.css
+++ b/styles/nav.css
@@ -18,7 +18,7 @@ header {
 
 .logo-slogan > h1 {
   margin-right: 15px;
-  color: var(--bordo-claro-color);
+  color: var(--pastel-color);
 }
 
 .logo-slogan > img {
