--- a/styles/nav.css
+++ b/styles/nav.css
@@ -72,31 +72,25 @@ a {
 }
 
 #menu-hidde > ul > li > a {
+  display: inline-block;
+  justify-content: center;
+  text-align: center;
+  background-color: #fff;
   color: #000;
+  min-width: 200px;
+  line-height: 61px;
 }
 
 #menu-hidde > ul {
-  background: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#menu-hidde > ul > li {
-  width: 200px;
-  height: 90px;
-  font-size: 15px;
-  text-align: center;
-  padding-top: 20px;
+#menu-hidde > ul > li > a:hover {
   transition: 0.5s ease-out;
-}
-
-#menu-hidde > ul > li:hover {
-  background: gray;
-}
-
-#menu-hidde > ul > li:hover > a {
   color: #fff;
+  background-color: gray;
 }
 
 i#hamburguer {
@@ -123,10 +117,10 @@ i#hamburguer {
   flex-direction: column;
 }
 
-#flecha {
+.flechina {
   position: absolute;
   left: 5px;
-  color: #fff;
+  color: #000;
 }
 
 .show-movel {
