--- a/styles/playlist.css
+++ b/styles/playlist.css
@@ -1,27 +1,43 @@
 @import "Root.css";
 
-body{
-    background-color: #f9f9f9;
+body {
+  background-color: #f9f9f9;
 }
 main {
-    display: flex;
-    margin: auto;
-    flex-direction: column;
-    align-items: center;
-    background-color: #e91c1c;
-    width: 1100px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-    border-radius: 200px;
-  }
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e91c1c;
+  width: 1100px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 200px;
+}
 
 .spotify-embed {
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  align-items: center;
+  max-width: 900px;
+  width: 100%;
+  border-radius: 20px;
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+@media (max-width: 915px) {
+  .spotify-embed {
     display: flex;
     margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
     flex-direction: column;
     align-items: center;
     max-width: 900px;
-    width: 100%;
+    width: 90%;
     border-radius: 20px;
     box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
     overflow: hidden;
+  }
 }
