--- a/styles/playlist.css
+++ b/styles/playlist.css
@@ -21,23 +21,17 @@ main {
   align-items: center;
   max-width: 900px;
   width: 100%;
+  margin-bottom: 40px;
   border-radius: 20px;
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 15px 15px 35px 1px rgba(0, 0, 0);
   overflow: hidden;
 }
 
 @media (max-width: 915px) {
   .spotify-embed {
-    display: flex;
-    margin: auto;
     margin-top: 40px;
     margin-bottom: 40px;
-    flex-direction: column;
-    align-items: center;
     max-width: 900px;
     width: 90%;
-    border-radius: 20px;
-    box-shadow: 0 0px 0px rgba(0, 0, 0, 0);
-    overflow: hidden;
   }
 }
