--- a/styles/nav.css
+++ b/styles/nav.css
@@ -57,6 +57,7 @@ header > div > nav > ul > li > a {
 
 header > div > nav > ul > li {
   list-style: none;
+  background-color: #fff;
 }
 
 #menu-hidde {
@@ -69,6 +70,7 @@ a {
   list-style-type: none;
   text-decoration: none;
   cursor: pointer;
+  background-color: #fff;
 }
 
 #menu-hidde > ul > li > a {
