--- a/styles/home.css
+++ b/styles/home.css
@@ -74,6 +74,10 @@ header a,
   z-index: 2;
 }
 
+.hero button a{
+  color: #fff;
+}
+
 /* home styles */
 
 .home-body {
@@ -107,6 +111,64 @@ header a,
   font-size: 18px;
   text-align: center;
   color: var(--pastel-color);
+}
+
+/* Container do vinil */
+.vinyl-container {
+  position: fixed; 
+  bottom: 20px; 
+  right: 20px; 
+  display: flex; 
+  align-items: center; 
+}
+
+.vinyl-cover {
+  width: 100px; 
+  height: 100px; 
+  margin-left: 10px; 
+  position: relative; 
+  z-index: 3; 
+}
+
+.vinyl-cover img {
+  width: 100%; 
+  height: auto; 
+  border-radius: 10px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3); /* Cor preta com 50% de opacidade para escurecer */
+  border-radius: 10px; /* Para manter as bordas arredondadas */
+  z-index: 12;
+}
+
+.vinyl-record {
+  width: 90px;
+  height: auto;
+  position: absolute; 
+  left: -45px; 
+  bottom: 10px;
+  animation: spin 2s linear infinite; 
+  transition: transform 0.3s ease; 
+  z-index: 1; 
+}
+
+.vinyl-record:hover {
+  transform: translateX(-20px); 
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @media (max-width: 915px) {
