--- a/styles/home.css
+++ b/styles/home.css
@@ -8,6 +8,12 @@
   z-index: 2;
 }
 
+.profile-icon {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+}
+
 body {
   overflow-y: auto;
   background-image: url("../images/coffeeShopAesthetic.jpg");
@@ -19,6 +25,14 @@ body {
 
 main {
   margin-top: 5px;
+}
+
+.profile-icon {
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+  cursor: pointer;
+  color: #fff;
 }
 
 .hero {
@@ -74,7 +88,7 @@ header a,
   z-index: 2;
 }
 
-.hero button a{
+.hero button a {
   color: #fff;
 }
 
@@ -115,24 +129,24 @@ header a,
 
 /* Container do vinil */
 .vinyl-container {
-  position: fixed; 
-  bottom: 20px; 
-  right: 20px; 
-  display: flex; 
-  align-items: center; 
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .vinyl-cover {
-  width: 100px; 
-  height: 100px; 
-  margin-left: 10px; 
-  position: relative; 
-  z-index: 3; 
+  width: 100px;
+  height: 100px;
+  margin-left: 10px;
+  position: relative;
+  z-index: 3;
 }
 
 .vinyl-cover img {
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: auto;
   border-radius: 10px;
 }
 
@@ -142,7 +156,12 @@ header a,
   left: 10px;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.3); /* Cor preta com 50% de opacidade para escurecer */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.3
+  ); /* Cor preta com 50% de opacidade para escurecer */
   border-radius: 10px; /* Para manter as bordas arredondadas */
   z-index: 12;
 }
@@ -150,16 +169,16 @@ header a,
 .vinyl-record {
   width: 90px;
   height: auto;
-  position: absolute; 
-  left: -45px; 
+  position: absolute;
+  left: -45px;
   bottom: 10px;
-  animation: spin 2s linear infinite; 
-  transition: transform 0.3s ease; 
-  z-index: 1; 
+  animation: spin 2s linear infinite;
+  transition: transform 0.3s ease;
+  z-index: 1;
 }
 
 .vinyl-record:hover {
-  transform: translateX(-20px); 
+  transform: translateX(-20px);
 }
 
 @keyframes spin {
