--- a/styles/topicoCinco.css
+++ b/styles/topicoCinco.css
@@ -2,10 +2,10 @@
 
 /* Estilos básicos */
 body {
-    color: #333;
-    background-color: #f9f9f9;
-    line-height: 1.6;
-  }
+  color: #333;
+  background-color: #f9f9f9;
+  line-height: 1.6;
+}
 
 /* Conteúdo principal */
 main {
@@ -27,10 +27,10 @@ main section:last-child {
   border-bottom: none;
 }
 
-main h2{
-    font-size: 1.8em;
-    color: #333;
-    margin: auto;
+main h2 {
+  font-size: 1.8em;
+  color: #333;
+  margin: auto;
 }
 
 main h3 {
@@ -52,4 +52,16 @@ main ul li {
 
 main ul li strong {
   color: #555;
+}
+
+@media (max-width: 915px) {
+  main {
+    padding: 30px 20px;
+    width: 380px;
+    margin: auto;
+    margin-top: 25px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+  }
 }
